--- a/Client/Application/src/app/components/facilities/facilities-modal/facilities-modal.component.scss
+++ b/Client/Application/src/app/components/facilities/facilities-modal/facilities-modal.component.scss
@@ -4,7 +4,7 @@
     padding: 16px;
     width: 100%;
     margin: 16px;
-    background-color: white;
+    background-color: var(--ion-color-light);
 
 
 }
@@ -18,7 +18,7 @@
     font-size: 16px;
     padding-left: 16px;
     padding-top: 16px;
-    color: #14274A;
+    color: var(--ion-color-primary);
 }
 
 .title {
@@ -28,7 +28,7 @@
     font-size: 2vw;
     line-height: 3.5vh;
     letter-spacing: 0.02em;
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
 
@@ -55,7 +55,7 @@
     font-style: normal;
     font-size: 12px;
     line-height: 3vh;
-    color: #14274A;
+    color: var(--ion-color-primary);
     margin: 0px
 }
 
@@ -79,7 +79,7 @@
 
     font-family: 'Roboto';
     font-style: normal;
-    color: #14274A;
+    color: var(--ion-color-primary);
 
     font-weight: 400;
     font-size: 16px;
@@ -90,7 +90,7 @@
     text-transform: uppercase;
 
     background: #FFFFFF;
-    border: 1px solid #14274A;
+    border: 1px solid var(--ion-color-primary);
 }
 
 .book-btn{
