--- a/Client/Application/src/app/components/food/food-list-popup/food-list-popup.component.html
+++ b/Client/Application/src/app/components/food/food-list-popup/food-list-popup.component.html
@@ -1,6 +1,6 @@
 <div style="vertical-align: middle;  margin: 0px; width: 30vw;">
     <p class="title-1">Description</p>
-    <!-- <mat-divider style="border-top-color: #14274A"></mat-divider> -->
+    <!-- <mat-divider style="border-top-color: var(--ion-color-primary)"></mat-divider> -->
     <br>
     <p class="content-2">
         {{description}}
