--- a/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
+++ b/Client/Application/src/app/components/news/news-list-popup/news-list-popup.component.html
@@ -18,7 +18,7 @@
 
     <!-- <div (click)="like()" fill="clear" class="likes">
       <ion-icon [name]="is_liked ? 'heart-outline' : 'heart-dislike-outline'"
-        [style.color]="is_liked ? '#A4274A' : '#14274A'"></ion-icon>
+        [style.color]="is_liked ? '#A4274A' : 'var(--ion-color-primary)'"></ion-icon>
     </div> -->
 
     <div class="likes-number">
