--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -42,7 +42,7 @@
             </ion-segment-button>
         </div>
     </ion-segment>
-    <ion-content>
+    <ion-content style="--background: var(--ion-color-light)">
 
         <ion-modal *ngIf="active_data" [enterAnimation]="enterAnimation" [leaveAnimation]="leaveAnimation" class="modal"
             [isOpen]="isModalOpen">
