--- a/Client/Application/src/app/pages/guest/services/browse/browse-services.component.html
+++ b/Client/Application/src/app/pages/guest/services/browse/browse-services.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content style="--background: var(--ion-color-light)">
 
     <div class="header">
         <ion-text class="title">
