--- a/Client/Application/src/app/chat/admin/chat/chat.component.html
+++ b/Client/Application/src/app/chat/admin/chat/chat.component.html
@@ -39,7 +39,7 @@
                                             [class]="c.owner_id == id ? 'multi received-message' : 'multi sent-message'">
 
                                             <p [style.fontSize]="isSpecial(c.content.trim()) ? '46px' : '16px'"
-                                                style="margin: 0px;">
+                                                style="color: var(--ion-color-dark); margin: 0px;">
                                                 {{c.content}}</p>
 
 
@@ -53,8 +53,8 @@
 
                                     <td *ngIf="(i == chat?.messages!.length - 1 || formatDate(chat?.messages![i + 1].date) != formatDate(c.date) || chat?.messages![i + 1].owner_id != c.owner_id)"
                                         class="col" [style.float]="c.owner_id == id ? 'left' : 'right'">
-                                        <p [style.color]="hovered_id == i ? 'white' : 'transparent'"
-                                            style="margin: 0px;" class="date">
+                                        <p [style.color]="hovered_id == i ? 'var(--ion-color-light)' : 'transparent'"
+                                            style="color: var(--ion-color-dark); margin: 0px;" class="date">
                                             {{formatDate(c.date)}}
                                         </p>
                                     </td>
