--- a/Client/Application/src/app/chat/chat-list/chat.component.scss
+++ b/Client/Application/src/app/chat/chat-list/chat.component.scss
@@ -57,14 +57,14 @@ color: #FFFFFF;
     border-radius: 20px;
     font-family: 'Inter';
     font-style: normal;
-    color: white;
+    color: var(--ion-color-light);
     font-size: 18px;
     line-height: 22px;
 }
 
 .send-area::placeholder {
 
-    color: white;
+    color: var(--ion-color-light);
 
 }
 
@@ -83,7 +83,7 @@ color: #FFFFFF;
     background: transparent;
     font-family: 'Inter';
     font-style: normal;
-    color: white;
+    color: var(--ion-color-light);
     font-size: 18px;
     line-height: 22px;
     // --padding-start: 10px;
@@ -99,7 +99,7 @@ color: #FFFFFF;
     background: #636363C4;
     font-family: 'Inter';
     font-style: normal;
-    color: white;
+    color: var(--ion-color-light);
     padding: 8px;
     text-align: left;
     font-size: 14px;
@@ -115,7 +115,7 @@ color: #FFFFFF;
     background: #D6B389CC;
     font-family: 'Inter';
     font-style: normal;
-    color: white;
+    color: var(--ion-color-light);
     padding: 8px;
     font-size: 14px;
 
@@ -137,7 +137,7 @@ color: #FFFFFF;
     width: fit-content;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     --color-hover: #DDDDDD;
-    --color-activated: white;
+    --color-activated: var(--ion-color-light);
     text-transform: none;
 
 
