--- a/Client/Application/src/app/components/database/blocks/filter/filter.component.scss
+++ b/Client/Application/src/app/components/database/blocks/filter/filter.component.scss
@@ -3,7 +3,7 @@
     font-family: 'Abhaya Libre';
     font-style: normal;
     font-size: 16px;
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
 
@@ -11,7 +11,7 @@
 
     font-family: 'Abhaya Libre';
     font-style: normal;
-    color: white !important;
+    color: var(--ion-color-light) !important;
 
     font-weight: 400;
     font-size: 16px;
@@ -20,7 +20,7 @@
 
     text-transform: uppercase;
 
-    background: #14274A;
+    background: var(--ion-color-primary);
     border-radius: 0px;
     padding-top: auto;
 
