--- a/Client/Application/src/app/components/database/change/change.component.scss
+++ b/Client/Application/src/app/components/database/change/change.component.scss
@@ -44,7 +44,7 @@
 
     margin: 16px;
     --background: transparent;
-    --color: black;
+    --color: var(--ion-color-dark);
     --box-shadow: none;
     --background-activated-opacity: 0;
     --background-focused-opacity: 0;
@@ -60,7 +60,7 @@
     padding: 8px;
     overflow-y: auto;
     border-radius: 40px;
-    background-color: white;
+    background-color: var(--ion-color-light);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -86,13 +86,13 @@
 
 .cancel-btn:disabled {
 
-    --background: black;
+    --background: var(--ion-color-dark);
     
 }
 
 .cancel-btn-dis {
     
-    --background: black;
+    --background: var(--ion-color-dark);
 
 }
 
@@ -101,7 +101,7 @@
     // width: 40%;
     padding-left: 32px;
     padding-right: 32px;
-    // border: 1px solid black;
+    // border: 1px solid var(--ion-color-dark);
 
 }
 
@@ -122,7 +122,7 @@
 
     background-color: #A4274A;
 
-    color: white;
+    color: var(--ion-color-light);
 
 }
 
@@ -137,8 +137,8 @@ th {
 
     font-family: 'Roboto' !important;
     text-align: center;
-    background-color: #14274A !important;
-    color: white;
+    background-color: var(--ion-color-primary) !important;
+    color: var(--ion-color-light);
     font-weight: 400;
 
 }
@@ -179,7 +179,7 @@ th {
     text-align: center;
     letter-spacing: 0.05em;
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
 
@@ -192,7 +192,7 @@ th {
 
     letter-spacing: 0.05em;
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 
 
@@ -216,11 +216,11 @@ th {
     height: 100%;
     width: 100%;
 
-    background-color: white;
+    background-color: var(--ion-color-light);
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
-    border: 1px solid #14274A;
+    border: 1px solid var(--ion-color-primary);
 
 }
 
@@ -232,6 +232,6 @@ th {
     font-weight: 700;
     font-size: 16px;
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
