--- a/Client/Application/src/app/components/database/change/completion/completion.component.scss
+++ b/Client/Application/src/app/components/database/change/completion/completion.component.scss
@@ -11,7 +11,7 @@
     // width: 40%;
     padding-left: 32px;
     padding-right: 32px;
-    // border: 1px solid black;
+    // border: 1px solid var(--ion-color-dark);
 
 }
 
@@ -32,9 +32,9 @@
 
     text-transform: uppercase;
 
-    background-color: #14274A;
+    background-color: var(--ion-color-primary);
 
-    color: white;
+    color: var(--ion-color-light);
 
 }
 
@@ -61,7 +61,7 @@
 
     background-color: #A4274A;
 
-    color: white;
+    color: var(--ion-color-light);
 
 }
 
@@ -76,8 +76,8 @@ th {
 
     font-family: 'Roboto' !important;
     text-align: center;
-    background-color: #14274A !important;
-    color: white;
+    background-color: var(--ion-color-primary) !important;
+    color: var(--ion-color-light);
     font-weight: 400;
 
 }
@@ -117,7 +117,7 @@ th {
     text-align: center;
     letter-spacing: 0.05em;
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
 
@@ -130,7 +130,7 @@ th {
 
     letter-spacing: 0.05em;
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 
 
@@ -152,11 +152,11 @@ th {
     height: 100%;
     width: 100%;
 
-    background-color: white;
+    background-color: var(--ion-color-light);
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
-    border: 1px solid #14274A;
+    border: 1px solid var(--ion-color-primary);
 
 }
 
@@ -168,6 +168,6 @@ th {
     font-weight: 700;
     font-size: 16px;
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
