--- a/Client/Application/src/app/components/database/database.component.scss
+++ b/Client/Application/src/app/components/database/database.component.scss
@@ -4,7 +4,7 @@
     font-style: normal;
     font-size: 24px;
     letter-spacing: 0.02em;
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
 
@@ -18,14 +18,14 @@ th {
 
     font-family: 'Roboto' !important;
     text-align: center;
-    background-color: #14274A !important;
-    color: white;
+    background-color: var(--ion-color-primary) !important;
+    color: var(--ion-color-light);
 
 }
 
 .cell {
 
-    color: #14274A;
+    color: var(--ion-color-primary);
     font-family: 'Roboto' !important;
 
 
@@ -59,8 +59,8 @@ th {
     
     position: fixed;
     padding: 10px;
-    background-color: #14274A;
-    color: white;
+    background-color: var(--ion-color-primary);
+    color: var(--ion-color-light);
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
@@ -86,7 +86,7 @@ mat-form-field {
 
     font-family: 'Roboto';
     font-style: normal;
-    color: white;
+    color: var(--ion-color-light);
 
     font-weight: 400;
     font-size: 16px;
@@ -98,8 +98,8 @@ mat-form-field {
 
     text-transform: uppercase;
 
-    background: #14274A;
-    border: 1px solid #14274A;
+    background: var(--ion-color-primary);
+    border: 1px solid var(--ion-color-primary);
     position: fixed;
     bottom: 16px;
     right: 16px;
@@ -110,7 +110,7 @@ mat-form-field {
 
     font-family: 'Roboto';
     font-style: normal;
-    color: white;
+    color: var(--ion-color-light);
 
     font-weight: 400;
     font-size: 16px;
@@ -122,8 +122,8 @@ mat-form-field {
 
     text-transform: uppercase;
 
-    background: #14274A;
-    border: 1px solid #14274A;
+    background: var(--ion-color-primary);
+    border: 1px solid var(--ion-color-primary);
     position: fixed;
     bottom: 16px;
     left: 16px;
@@ -134,7 +134,7 @@ mat-form-field {
 
     font-family: 'Abhaya Libre';
     font-style: normal;
-    color: white !important;
+    color: var(--ion-color-light) !important;
 
     font-weight: 400;
     font-size: 16px;
@@ -143,7 +143,7 @@ mat-form-field {
 
     text-transform: uppercase;
 
-    background: #14274A;
+    background: var(--ion-color-primary);
     border-radius: 0px;
     padding-top: auto;
 
@@ -153,7 +153,7 @@ mat-form-field {
 
     margin-left: 20%;
     width: 60%;
-    border-top-color: #14274A;
+    border-top-color: var(--ion-color-primary);
     margin-top: 8px;
 
 }
@@ -163,6 +163,6 @@ mat-form-field {
     font-family: 'Abhaya Libre';
     font-style: normal;
     font-size: 16px;
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
