--- a/Client/Application/src/app/components/food/food-list-item/food-list-item.component.scss
+++ b/Client/Application/src/app/components/food/food-list-item/food-list-item.component.scss
@@ -33,6 +33,7 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
+    color: var(--ion-color-dark);
 
 }
 
@@ -44,5 +45,6 @@
     font-weight: 400;
     font-size: 13px;
     line-height: 20px;
+    color: var(--ion-color-dark);
 
 }
