--- a/Client/Application/src/app/components/room/room-item/room-item.component.scss
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.scss
@@ -1,8 +1,8 @@
 
-$primary-color: #14274A;
+$primary-color: var(--ion-color-primary);
 
 .parent {
-    color: $primary-color;
+    color: var(--ion-color-dark);
     display: block;
     font-family: 'Abhaya Libre';
     font-style: normal;
@@ -77,7 +77,7 @@ hr {
 }
 
 .image-bg {
-    background-color: #14274a;
+    background-color: var(--ion-color-primary);
     block-size: fit-content;
     height: fit-content;
     margin-top: 12%;
