--- a/Client/Application/src/app/pages/authentication/login/login.component.scss
+++ b/Client/Application/src/app/pages/authentication/login/login.component.scss
@@ -31,7 +31,7 @@
     width: 60%;
     margin-bottom: 16px;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 }
 
 .input {
@@ -104,7 +104,7 @@
     margin-top: 16px;
     line-height: 23px;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 
 }
 
