--- a/Client/Application/src/app/pages/authentication/verify/verify.component.scss
+++ b/Client/Application/src/app/pages/authentication/verify/verify.component.scss
@@ -43,7 +43,7 @@
 .date-container {
 
     width: 80%;
-    background-color: white;
+    background-color: var(--ion-color-light);
     // width: auto;
     border-radius: 10px;
     position: relative;
@@ -65,13 +65,19 @@
 .labels {
 
     position: relative;
-    top: 35%;
+    padding-top: 5%;
+    top: 30%;
+    height: 70%;
     display: flex;
     flex-direction: column;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
     align-items: center;
     justify-content: center;
+    background-color: var(--ion-color-light);
 
 }
+
 
 
 .title {
@@ -84,7 +90,7 @@
     width: 50%;
     margin-bottom: 16px;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 }
 
 
@@ -117,7 +123,7 @@
     margin-top: 16px;
     line-height: 23px;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 
 }
 
