--- a/Client/Application/src/app/pages/guest/home/home.component.scss
+++ b/Client/Application/src/app/pages/guest/home/home.component.scss
@@ -1,4 +1,4 @@
-$primary-color: #14274A;
+$primary-color: var(--ion-color-primary);
 
 .header {
 
@@ -36,7 +36,7 @@ $primary-color: #14274A;
 .title {
 
   @extend .title-parent;
-  color: white;
+  color: var(--ion-color-light);
   font-size: 34px;
   top: 45%;
   
@@ -45,7 +45,7 @@ $primary-color: #14274A;
 .body-title {
   
   @extend .title-parent;
-  color: $primary-color;
+  color: var(--ion-color-dark);
   font-size: 23px;
   
   // for the horizontal line
