--- a/Client/Application/src/app/pages/guest/profile/edit-profile/edit-profile.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/edit-profile/edit-profile.component.scss
@@ -26,9 +26,9 @@
 
     text-transform: uppercase;
 
-    background-color: #14274A;
+    background-color: var(--ion-color-primary);
 
-    color: white;
+    color: var(--ion-color-light);
 
     display: flex;
     width: fit-content !important;
@@ -61,7 +61,7 @@
 
     background-color: #A4274A;
 
-    color: white;
+    color: var(--ion-color-light);
 
 }
 
@@ -92,7 +92,7 @@
     text-align: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
 
@@ -103,7 +103,7 @@
     font-weight: 400;
     font-size: 14px;
     letter-spacing: 0.05em;
-    color: #14274A;
+    color: var(--ion-color-primary);
     width: 20vw;
     margin: auto;
     display: flex;
@@ -130,11 +130,11 @@
     height: 100%;
     width: 100%;
 
-    background-color: white;
+    background-color: var(--ion-color-light);
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
-    border: 1px solid #14274A;
+    border: 1px solid var(--ion-color-primary);
 
 }
 
@@ -143,12 +143,12 @@
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    color: #14274A;
+    color: var(--ion-color-primary);
 }
 
 .register {
 
-    color: #14274A;
+    color: var(--ion-color-primary);
     padding-top: 32px;
     display: flex;
     justify-content: center;
@@ -159,7 +159,7 @@
 
 .forgot-pass {
 
-    color: #14274A;
+    color: var(--ion-color-primary);
     float: right;
     font-family: 'Montserrat';
     font-size: 14px;
