--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -6,7 +6,7 @@
     height: 70%;
     padding: 24px;
     border-radius: 40px;
-    background-color: white;
+    background-color: var(--ion-color-light);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -30,7 +30,7 @@
 
     text-transform: capitalize;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 
 }
 
@@ -44,14 +44,14 @@
     line-height: 31px;
     letter-spacing: 0.02em;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 }
 
 .back-btn {
 
     margin: 16px;
     --background: transparent;
-    --color: black;
+    --color: var(--ion-color-dark);
     --box-shadow: none;
     --background-activated-opacity: 0;
     --background-focused-opacity: 0;
@@ -66,7 +66,7 @@
     font-size: 12px;
     line-height: 15px;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 
 }
 
@@ -89,7 +89,7 @@
     font-style: normal;
     font-size: 12px;
     line-height: 3vh;
-    color: #14274A;
+    color: var(--ion-color-primary);
     margin: 0px;
     font-weight: 700;
     text-transform: capitalize;
@@ -99,7 +99,7 @@
 
     display: inline-block;
     width: 10px;
-    background-color: white;
+    background-color: var(--ion-color-light);
     border: 0px;
     margin: 16px;
     --background: #D6B389;
@@ -108,7 +108,7 @@
 }
 
 .seats{
-    color:#14274A;
+    color:var(--ion-color-primary);
 }
 
 
