--- a/Client/Application/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.scss
@@ -3,7 +3,7 @@
     position: relative;
     top: 25%;
     display: flex;
-    background-color: white;
+    background-color: var(--ion-color-light);
     margin: 0px;
     flex-direction: column;
     // align-items: center;
@@ -35,7 +35,7 @@
     /* identical to box height */
 
 
-    color: #000000;
+    color: var(--ion-color-dark);
 
 
 }
@@ -48,7 +48,7 @@
     --font-size: 18px;
     --line-height: 12px;
 
-    --color: #14274A;
+    --color: var(--ion-color-primary);
 
 
 }
@@ -58,7 +58,7 @@
 .options {
 
     --font-family: 'Roboto';
-    --background: #14274A;
+    --background: var(--ion-color-primary);
     --border-radius: 50px;
     font-size: 12px;
     font-style: normal;
@@ -89,7 +89,7 @@ ion-segment {
 
     --border-radius: 0px;
     --border: 0px;
-    --background: white;
+    --background: var(--ion-color-light);
 
 }
 
