--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -1,55 +1,55 @@
-<ion-content style="margin-bottom: 100px;">
+<ion-content style="margin-bottom: 100px; --background: var(--ion-color-light)">
 
-    <div class="main">
-        <p class="title">
-            This is it.
-        </p>
+<div class="main">
+    <p class="title">
+        This is it.
+    </p>
+</div>
+
+<h1 class="restaurant-header">Restaurant</h1>
+<hr>
+<div class="container">
+    <p class="content-2">
+
+        Indulge in a culinary adventure at our hotel's application restaurant, where each bite
+        is a thrilling
+        explosion
+        of flavors. Led by a team of skilled chefs, our dining destination will take you on a
+        journey of taste, with
+        dishes crafted from the freshest ingredients and innovative techniques.
+
+    </p>
+</div>
+
+<br>
+
+<p class="header-2">The Chefs</p>
+<div class="image-bg">
+    <div class="image-container">
+        <img src="../../../../../assets/rooms/chefs2.jpg">
+        <div class="overlay-text">Click here to view</div>
     </div>
+</div>
 
-    <h1 class="restaurant-header">Restaurant</h1>
-    <hr>
-    <div class="container">
-        <p class="content-2">
+<h1 class="restaurant-header">Menu</h1>
+<hr>
+<div class="container">
+    <p class="content-2">
+        The menu changes seasonally to ensure that the ingredients are at the peak of their
+        flavor, and the chefs
+        are always experimenting with new techniques and recipes to keep things exciting.
+    </p>
+</div>
 
-            Indulge in a culinary adventure at our hotel's application restaurant, where each bite
-            is a thrilling
-            explosion
-            of flavors. Led by a team of skilled chefs, our dining destination will take you on a
-            journey of taste, with
-            dishes crafted from the freshest ingredients and innovative techniques.
+<div class="button-container">
 
-        </p>
-    </div>
+    <button [routerLink]="['/restaurant/menu']" class="view-menu-button">View Menu</button>
+</div>
+<div class="button-container">
 
-    <br>
+    <!-- <button class="feedback-button">Feedback</button> -->
+</div>
 
-    <p class="header-2">The Chefs</p>
-    <div class="image-bg">
-        <div class="image-container">
-            <img src="../../../../../assets/rooms/chefs2.jpg">
-            <div class="overlay-text">Click here to view</div>
-        </div>
-    </div>
-
-    <h1 class="restaurant-header">Menu</h1>
-    <hr>
-    <div class="container">
-        <p class="content-2">
-            The menu changes seasonally to ensure that the ingredients are at the peak of their
-            flavor, and the chefs
-            are always experimenting with new techniques and recipes to keep things exciting.
-        </p>
-    </div>
-
-    <div class="button-container">
-
-        <button [routerLink]="['/restaurant/menu']" class="view-menu-button">View Menu</button>
-    </div>
-    <div class="button-container">
-
-        <!-- <button class="feedback-button">Feedback</button> -->
-    </div>
-
-    <br><br><br><br><br><br>
+<br><br><br><br><br><br>
 
 </ion-content>
