--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
@@ -17,7 +17,7 @@
     font-size: 34px;
     line-height: 39px;
     text-transform: uppercase;
-    color: white;
+    color: var(--ion-color-light);
     width: fit-content;
     position: absolute;
     left: 50%;
@@ -30,7 +30,7 @@
     text-align: center;
     font-family: 'Roboto';
     font-weight: 500;
-    color: black;
+    color: var(--ion-color-dark);
     
 }
 
@@ -53,7 +53,7 @@ hr {
     font-style: normal;
     font-size: 12px;
     line-height: 3vh;
-    color: #000000;
+    color: var(--ion-color-dark);
     margin: 0px;
     text-align: center;
   }
