--- a/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -1,5 +1,5 @@
-<ion-header collapse="fade">
-    <ion-toolbar>
+<ion-header style="--background: var(--ion-color-light)">
+    <ion-toolbar style="--background: var(--ion-color-light)">
 
         <ion-item style="--background: transparent; margin: 12px; padding-bottom: 12px; border: 0;"
             lines="none">
@@ -19,9 +19,10 @@
                 (click)="scroll(category.value.label)" class="wrap" style="overflow-x: auto;">
                 <div class="content">
 
-                    <ion-button style="width: 95%; color:#930000; font-style: Asap;" expand="block"
-                        fill="clear" color="tertiary">{{ category.value.label | translate
-                        }}</ion-button>
+                    <ion-button
+                        style="width: 95%; color:var(--ion-color-tertiary); font-style: Asap;"
+                        expand="block" fill="clear" color="tertiary">{{ category.value.label |
+                        translate }}</ion-button>
                 </div>
             </div>
         </div>
@@ -53,7 +54,7 @@
             <br>
 
 
-            <ion-content style="height: 67%;">
+            <ion-content style="height: 60%; --background: var(--ion-color-light)">
 
 
                 <ng-container *ngFor="let food of order?.food; let i = index">
@@ -61,7 +62,7 @@
 
                     <ion-list>
 
-                        <ion-item>
+                        <ion-item style="--background: var(--ion-color-light)">
 
                             <ion-grid>
 
@@ -99,14 +100,14 @@
 
                 </ng-container>
 
-                
+
             </ion-content>
             <ion-button fill="clear" class="add-btn" (click)="uploadCart()">Order</ion-button>
         </div>
     </ng-template>
 </ion-modal>
 
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content style="--background: var(--ion-color-light)" [fullscreen]="true" class="ion-padding">
 
 
     <div *ngFor="let category of food_categories | keyvalue">
