--- a/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -16,7 +16,7 @@ $primary-color: var(--ion-color-primary);
     height: 70%;
     padding: 24px;
     border-radius: 40px;
-    background-color: white;
+    background-color: var(--ion-color-light);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -33,6 +33,7 @@ $primary-color: var(--ion-color-primary);
     height: 100%;
 
     --background: #d9d9d9d9;
+    color: var(--ion-color-dark);
 
 }
 
@@ -40,7 +41,7 @@ $primary-color: var(--ion-color-primary);
 
     margin: 16px;
     --background: transparent;
-    --color: black;
+    --color: var(--ion-color-dark);
     --box-shadow: none;
     --background-activated-opacity: 0;
     --background-focused-opacity: 0;
@@ -52,7 +53,7 @@ $primary-color: var(--ion-color-primary);
     font-family: 'Asap';
     font-style: normal;
     font-weight: 500;
-    font-size: 30px;
+    font-size: 26px;
     width: 50%;
     text-transform: uppercase;
     line-height: 28px;
@@ -91,11 +92,12 @@ $primary-color: var(--ion-color-primary);
 }
 
 .header-2 {
-
+    
+    color: var(--ion-color-dark);
     font-family: 'Abhaya Libre';
     font-size: 30px;
     margin: 0px;
-    border-bottom: 1px solid #930000;
+    border-bottom: 1px solid var(--ion-color-tertiary);
     width: 80%;
 
 }
@@ -112,7 +114,7 @@ $primary-color: var(--ion-color-primary);
 
     padding-top: 32px;
 
-    color: #14274A;
+    color: var(--ion-color-dark);
 
 }
 
@@ -121,7 +123,8 @@ $primary-color: var(--ion-color-primary);
 
     display: inline-block;
     width: 10px;
-    background-color: white;
+    background-color: var(--ion-color-light);
+    color: var(--ion-color-dark);
     border: 0px;
     padding: 8px;
 
@@ -136,11 +139,13 @@ $primary-color: var(--ion-color-primary);
     padding-bottom: 0px;
     text-align: start;
     display: inline;
-
+    color: var(--ion-color-dark);
+    
 }
 
 .mark {
-
+    
+    color: var(--ion-color-dark);
     font-size: 20px;
     font-weight: 400;
     font-family: 'Roboto';
@@ -162,7 +167,7 @@ $primary-color: var(--ion-color-primary);
 
 
 
-    color: #14274A;
+    color: var(--ion-color-dark);
 }
 
 .padded {
@@ -192,5 +197,5 @@ $primary-color: var(--ion-color-primary);
     position: relative;
     text-align: center;
 
-    color: white;
+    color: var(--ion-color-light);
 }
