--- a/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.scss
@@ -6,7 +6,7 @@
     height: 80%;
     padding: 24px;
     border-radius: 40px;
-    background-color: white;
+    background-color: var(--ion-color-light);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -64,7 +64,7 @@
 
     text-transform: capitalize;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 
 }
 
@@ -78,14 +78,14 @@
     line-height: 31px;
     letter-spacing: 0.02em;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 }
 
 .back-btn {
 
     margin: 16px;
     --background: transparent;
-    --color: black;
+    --color: var(--ion-color-dark);
     --box-shadow: none;
     --background-activated-opacity: 0;
     --background-focused-opacity: 0;
@@ -100,7 +100,7 @@
     font-size: 12px;
     line-height: 15px;
 
-    color: #000000;
+    color: var(--ion-color-dark);
 
 }
 
