--- a/Client/Application/src/app/tabs/tabs.page.scss
+++ b/Client/Application/src/app/tabs/tabs.page.scss
@@ -20,7 +20,7 @@
     font-size: 24px;
     line-height: 28px;
 
-    color: #14274A
+    color: var(--ion-color-dark)
 }
 
 .burger-btn {
@@ -60,7 +60,7 @@
 
     transition: all 250ms ease-in-out;
     padding: 8px 2px 8px 8px;
-    background-color: white;
+    background-color: var(--ion-color-light);
     width: 100%;
     // height: 100%;
 
@@ -115,7 +115,7 @@
     display: inline-block;
 
 
-    color: #14274A;
+    color: var(--ion-color-primary);
 
 }
 
@@ -136,7 +136,7 @@
     line-height: 28px;
     width: 100%;
     text-transform: uppercase;
-    color: #14274A;
+    color: var(--ion-color-dark);
 
 }
 
@@ -149,7 +149,7 @@
     font-size: 16px;
     line-height: 20px;
 
-    color: #14274A;
+    color: var(--ion-color-dark);
 
 
 
